--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
+        "axios": "^1.6.7",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^4.0.0",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.45.0",
         "sass-loader": "^12.4.0"
     },
     "dependencies": {
-        "perfect-scrollbar": "^1.5.5",
-        "async": ">=2.6.4"
+        "async": ">=2.6.4",
+        "perfect-scrollbar": "^1.5.5"
     }
 }
